# AnimaClothing

./: .env.example  .gitignore  LICENSE  README.md  app.js  config.toml.example  import.bat  import.sh  index.html  install.bat  install.sh  pyproject.toml  requirements-generation.txt  requirements-scoring.txt  requirements.txt  run.bat  run.sh
animadex/: __init__.py  __main__.py  app.py  auth.py  captcha.py  config.py  db.py  gzip_mw.py  images.py  ratelimit.py  schema.sql
animadex/pipeline/: __init__.py  generation.py  ingest.py  loras.py  orchestrator.py  scoring.py  thumbnails.py
animadex/routes/: __init__.py  admin.py  api_gallery.py  api_images.py  contact.py  pages.py  sitemap.py
animadex/static/: app.js  style.css
animadex/templates/: admin_login.html  admin_messages.html  character.html  index.html  landing.html  sitemap.xml
docs/: configuration.md  data-format.md  deploying.md  import-from-site.md  pipeline.md
samples/: README.md  artists.csv  characters.csv
scripts/: README.md  clean_explicit_tags.py  fetch_and_translate_gallery5.py  generate_dataset.py  import_from_site.py  test_baidu_sign.py  translate_with_baidu.py  translate_with_local_llm.py
